--- a/site/package.json
+++ b/site/package.json
@@ -13,6 +13,8 @@
     "react-google-charts": "^4.0.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "react-top-loading-bar": "^2.3.1",
     "sass": "^1.66.1",
     "web-vitals": "^2.1.4"
   },
