--- a/site/package.json
+++ b/site/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
+    "faker": "^6.6.6",
     "local-storage": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-toastify": "^9.1.3",
     "react-top-loading-bar": "^2.3.1",
     "sass": "^1.66.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
